syntax = "proto3";

package book;

service BookService {
  rpc GetBook (BookRequest) returns (BookResponse) {}
}

message BookRequest {
  int32 id = 1;
}

message BookResponse {
  int32 id = 1;
  string title = 2;
  string author = 3;
}